# daily-tweeter

./: .gitignore  README.md  README.rst  requirements.txt  setup.cfg  setup.py
daily_tweeter/: client.py  cmd.py  config.py  posts.py  publish.py  schedule.py
pymotw_tweeter/: cmd.py
