[metadata]
name = tweet-helper
summary = Schedule a series of tweets to be psoted on a given day.
description-file =
    README.rst
author = Doug Hellmann
author-email = doug@doughellmann.com
home-page = https://github.com/dhellmann/tweet-helper
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    tweet_helper

[entry_points]
console_scripts =
    tweet-helper = tweet_helper.cmd:main

[wheel]
universal = 1
