[metadata]
name = pymotw-tweeter
summary = Schedule a series of tweets to be psoted on a given day.
description-file =
    README.rst
author = Doug Hellmann
author-email = doug@doughellmann.com
home-page = https://github.com/dhellmann/pymotw-tweeter
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    pymotw_tweeter

[entry_points]
console_scripts =
    pymotw-tweeter = pymotw_tweet.cmd:main

[wheel]
universal = 1
